fix spacing for messages

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ button {
 #messages {
   display: flex;
   justify-content: space-between;
+  min-width: 375px;
 }
 
 #scoreboard {
